# SoundNovel

./: .gitignore  AGENTS.md  API.txt  ARCHITECTURE.md  CLAUDE.md  README.md  README_MULTI_MODEL.md  act_plan.json  batch_outline_generator.py  build_exe.py  config.json  config.yaml  config_example.json  config_simple.json  debug_acts.py  document_importer_simple.py  extract_stage4.py  generators.py  gui_app.py  main.py  main_simple.py  models.py  novel_generator.py  novel_output.json  output_formatter_simple.py  prompt_manager_simple.py  prompts.yaml  pyproject.toml  requirements.txt  run_gui.py  soundnovel.py  test_api_optimization.py  test_chinese_acts.py  test_improved_chapter_expansion.py  test_mult_acts.py  test_report.md  text_splitter_simple.py  tokscale-export-20260310-125459.json  tomato-uploader.user.js  utils.py  (+1 more)
.claude/: settings.local.json
.sisyphus/: boulder.json
01_source/: SCHEMA.md  __init__.py  core_setting.example.yaml  core_setting.yaml  overall_outline.example.yaml  overall_outline.yaml
02_outline/: __init__.py  chapter_outline_01-10.yaml  chapter_outline_01-150.yaml  chapter_outline_01-58.yaml
03_draft/: __init__.py  chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md  chapter_07.md  chapter_08.md  chapter_09.md  chapter_10.md  chapter_11.md  chapter_12.md  chapter_13.md  chapter_14.md  chapter_15.md  chapter_16.md  chapter_17.md  chapter_18.md  chapter_19.md  chapter_20.md  chapter_21.md  chapter_22.md  chapter_23.md  chapter_24.md  chapter_25.md  chapter_26.md  chapter_27.md  chapter_28.md  chapter_29.md  (+24 more)
(+301 files in other folders)
