[project]
name = "soundnovel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "chardet>=5.2.0",
    "flask>=3.1.1",
    "openai>=1.99.9",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "volcengine-python-sdk[ark]>=4.0.11",
    "werkzeug>=3.1.3",
    "zai>=0.0.2",
    "zai-sdk>=0.0.3.1",
    "zhipuai>=2.1.5.20250801",
]
