[project]
name = "soundnovel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "chardet>=5.2.0",
    "flask>=3.1.1",
    "openai>=1.99.9",
    "psutil>=7.0.0",
    "pyinstaller>=6.17.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "tqdm>=4.67.1",
    "volcengine-python-sdk[ark]>=4.0.11",
    "werkzeug>=3.1.3",
    "zai>=0.0.2",
    "zai-sdk>=0.0.3.1",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
target-version = "py310"
exclude = ["__pycache__", ".git", "build", "dist", ".venv", "tests", "docs", "02_outline", "03_draft", "04_prompt", "06_log"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "W293", "W291", "W292", "F401", "E402", "F841", "E722", "F541", "F811", "W605", "F402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=novel_generator"
